--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,32 @@
 <html>
+    <header>
+        <title>
+            Article one | Samapti Sahu
+        </title>
+    </header>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article One
+        </h3>
+        <div>
+            August 15, 2017
+        </div>
+        <div>
+            <p>
+                This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
+            </p>
+            <p>
+                This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
+            </p>
+            <p>
+                This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
+            </p>
+        </div>
+    </body>
+         
+       
 </html>
