[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
         <title>
             Article one | Samapti Sahu
         </title>
+        <meta name="viewport" content="device-width, initial-scale=1" />
     </header>
     <body>
         <div>
